Fix calendar alignment
Needed to apply the correct style and then unfloat the title to give the
calendar a place in the flow to render.

--- a/app/styles/newcomponents/offering-calendar.scss
+++ b/app/styles/newcomponents/offering-calendar.scss
@@ -1,4 +1,4 @@
-.user-profile-calendar {
+.offering-calendar {
   @include fill-parent;
   @include omega;
   border: 1px solid $black;
@@ -14,6 +14,8 @@
     @include ilios-heading;
     font-size: 1.25 * $base-font-size;
     margin-bottom: 1em;
+    text-align: center;
+    width: 100%;
   }
 
   .loding-indicator {
